# fetch-analytics-challenge

./: README.md  pyproject.toml  specs.md
.github/workflows/: deploy_dashboard.yml
ingestion/: models.py  pipeline.py
transformation/fetch_dbt/: .user.yml  dbt_project.yml  profiles.yml
transformation/fetch_dbt/models/int/: int_brands.sql  int_most_recent_month_scanned_receipts.sql  int_new_users.sql  int_users.sql
transformation/fetch_dbt/models/mart/: brand_spend_by_new_users.sql  brand_transactions_by_new_users.sql  items_by_receipt_status.sql  spend_by_receipt_status.sql  top_brands.sql
transformation/fetch_dbt/models/stg/: sources.yml  stg_brands.sql  stg_receipt_items.sql  stg_receipts.sql  stg_users.sql  stg_users.yml
transformation/fetch_dbt/seeds/: dim_companies.csv
viz/: evidence.config.yaml  package.json
viz/.evidence/customization/: .profile.json
viz/pages/: +layout.svelte  index.md
viz/queries/: brand_spend_new_users.sql  brand_transactions_new_users.sql  num_items_per_receipt_by_status.sql  spend_per_receipt_by_status.sql
viz/sources/fetch_db/: brand_spend_new_users.sql  brand_transactions_new_users.sql  connection.yaml  items_receipt_status.sql  spend_receipt_status.sql
